--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -5,7 +5,7 @@ highlight_color: '#3498db'
 
 # Profile links on the left sidebar, leave blank to ignore
 social:
-  github: swanson
+  github: shubh232
   #bitbucket: philipj
   hacker_news: swanson
   #stackexchange: 348619
@@ -19,9 +19,9 @@ social:
   #flickr: johndoe
 
 # "Hi, I'm _______"
-name: Matt Swanson
-email: test@example.com
-tagline: "weak opinions, strongly held"
+name: Shubh Srivastava 
+email: shubh232@gmail.com
+tagline: "cogito ergo sum"
 
 # Google Analytics key, leave blank to ignore
 google_analytics_key: UA-xxxx-x
